<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="?android:attr/windowBackground"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="80dp"
    android:paddingEnd="20dp"
    android:paddingBottom="60dp"
    tools:context=".MainActivity">

    <ImageView android:id="@+id/coltec_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/coltec_logo"
        android:contentDescription="@string/app_name"/>

    <!-- Login Label -->
    <TextView android:id="@+id/login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="24sp"
        android:textStyle="bold"

        android:textColor="@color/textLight"
        android:text="@string/loginLabel"

        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        />

    <!--    Login forms -->
    <EditText
        android:id="@+id/login_input"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/loginPlaceholder"

        android:textColor="@color/backgroundColorLight"
        android:textColorHint="@color/backgroundColorLight"

        android:background="@drawable/input_rules"
        />

    <!-- Password Input -->
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:hint="@string/passwordPlaceholder"

        android:textColor="@color/backgroundColorLight"
        android:textColorHint="@color/backgroundColorLight"

        android:background="@drawable/input_rules"
        />

    <!-- Login Button -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:text="@string/loginLabel"

        android:backgroundTint="@color/blueLight"
        android:padding="20dp"
        />

    <!-- Link 1 -->
    <TextView
        android:id="@+id/no_access"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal"

        android:text="@string/noAccess"
        android:textColor="@color/backgroundColorLight"

        android:layout_marginTop="20dp"

        android:clickable="true"
        android:focusable="true"/>

</LinearLayout>
